# Analizador-Hardware

./: .gitignore  README.md  analizador-caracteristicas-pc_0.1.0_x64_en-US.msi  package-lock.json  package.json  reporte_sistema.txt
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  reporte_sistema.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
