[package]
name = "analizador-caracteristicas-pc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

#[lib]
#name = "analizador_caracteristicas_pc_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.31"

[profile.release]
lto = true # Optimiza el tamaño y velocidad del binario en Fedora
